gcc/fortran: 2007-07-22  Daniel Franke  <franke.daniel@gmail.com>

PR fortran/32710
	* parse.c (gfc_fixup_sibling_symbols): No replacement of symbols if
	the current is a namelist.

gcc/testsuite:
2007-07-22  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/32710
	* gfortran.dg/namelist_30.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126828 138bc75d-0d04-0410-961f-82ee72b054a4